# SIMDVectorizationOpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
python_playground/: .gitignore  base64_benchmark.md  generate_base64_table.py  run_benchmarking.py
python_playground/tokenizer_example/: tokenizer_example.py
src/fast_base64/: ReadMe.md
src/fast_tokenizer/: tokenizer.cpp  tokenizer.h
src/naive_base64/: naive_base64.cpp  naive_base64.h
src/playground/: CMakeLists.txt  ReadMe.md  sse_instrinsics_demo.cpp  test_avx2_instrinsics.cpp  test_instrinsics.cpp  test_serialization.cpp  test_split.cpp
src/utils/: serialization.cpp  serialization.h  utils.cpp  utils.h
